# arenax-lab

./: .direnvrc  PROJECT_README.md  README.md  SOLUTION_SUMMARY.md  main.py  pyproject.toml  setup.py  test_installation.py
examples/: __init__.py  train_baseline.py  train_ppo.py
franka_golf/: __init__.py  cli.py
franka_golf/agents/: __init__.py  base.py  baseline.py  bc.py  dqn.py  ppo.py  sac.py
franka_golf/evaluation/: __init__.py  evaluator.py
franka_golf/training/: __init__.py  trainer.py
franka_golf/utils/: __init__.py  device.py
