[tool.poetry]
name = "franka-golf"
version = "0.1.0"
description = "Franka Golf - ArenaX Labs ML Hiring Challenge"
authors = ["Your Name <your.email@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
torch = ">=2.0.0,<2.3.0"
numpy = ">=1.21.0,<2.0.0"
gymnasium = ">=0.29.0"
sai-rl = "*"
sai-mujoco = "*"
matplotlib = ">=3.5.0"
tensorboard = ">=2.10.0"
tqdm = ">=4.64.0"
click = "^8.1.0"
rich = "^13.0.0"
seaborn = "^0.12.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"
black = "^23.0.0"
isort = "^5.12.0"
flake8 = "^6.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 88
target-version = ['py39']

[tool.isort]
profile = "black"
line_length = 88 